--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@efstajas/tela",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "description": "A framework for building Intercom Canvas Kit applications.",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc"
   },
-  "author": "",
-  "license": "ISC",
+  "keywords": ["intercom", "canvas kit", "custom apps", "express"],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/efstajas/tela.git"
+  },
+  "author": "Jason Efstathiou",
+  "license": "Apache-2.0",
   "devDependencies": {
     "typescript": "^3.8.3"
   },
